Fix performance regression caused by addition of ServerStatus metrics

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0, 9.0.0-rc2
    • Affects Version/s: 9.0.0-rc0
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v9.0
    • Hide

      Run the aggregation_read_commands  task in evergreen.

      Show
      Run the aggregation_read_commands  task in evergreen.
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None
    • 🟢 On Track

      As documented in https://jira.mongodb.org/browse/BF-44863 the aggregation_read_commands task is showing a 17% performance regression.  This is caused by a change to src/mongo/db/pipeline/accumulator.h function checkMemUsage() which is now evaluating the virtual function getOpName() with every call instead of only when the memory usage is exceeded. 

            Assignee:
            Logan Karbiner
            Reporter:
            Logan Karbiner
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: