SERVER-131888 Fix performance regression in memory limit checking (#59177)

GitOrigin-RevId: 84284f12154039c2e2f5934b4a3ad7a5f5eac97a